base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-cicd-app
  labels:
    app.kubernetes.io/name: k8s-cicd-api
    app.kubernetes.io/managed-by: kustomize
